Start working on 1.21.x support